# pizza-bot

./: .gitignore  GEMINI.md  README.md  app.py  app_temp.py  app_v1.py  app_v2.py  fix_notebook.py  main.py  pizza-bot.py  pyproject.toml  requirements.txt
notebooks/: dodo.ipynb
