[project]
name = "llm-practical-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "html2text>=2025.4.15",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.6",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-mistralai>=1.1.1",
    "langchain-openai>=1.1.7",
    "matplotlib>=3.10.8",
    "mistralai>=1.10.1",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
